[gd_scene load_steps=2 format=3 uid="uid://b6nsxb3jpy7we"]

[ext_resource type="Script" uid="uid://cg54lscdgc3pw" path="res://addons/itch_uploader/export_process_modal/export_process_modal.gd" id="1_krpps"]

[node name="ExportProcessModal" type="Window"]
title = "Exporting and Uploading to Itch"
initial_position = 2
size = Vector2i(400, 200)
wrap_controls = true
transient = true
exclusive = true
popup_window = true
min_size = Vector2i(400, 200)
script = ExtResource("1_krpps")

[node name="BackgroundPanel" type="Panel" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 8.0
offset_top = 8.0
offset_right = -8.0
offset_bottom = -8.0
grow_horizontal = 2
grow_vertical = 2

[node name="ProcessEntryContainer" type="VBoxContainer" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="OkButton" type="Button" parent="VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "OK"

[node name="CancelButton" type="Button" parent="VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Cancel"

[connection signal="close_requested" from="." to="." method="_on_close_requested"]
